code-experiments: renamed project from dynamic-enum to code-experiments